update backup branch

--- a/source/_posts/7月小记.md
+++ b/source/_posts/7月小记.md
@@ -1,5 +1,5 @@
 ---
-title: 7月小记
+title: 7、8月小记
 date: 2020-07-01 23:47:28
 tags: [feeling&mind]
 ---
@@ -37,3 +37,27 @@ tags: [feeling&mind]
 
 
 希望是个好的开端，且能持续下去
+
+
+
+
+
+### 8.14 decline NEU offer, 正式放弃美国
+
+去年毕业季想偷懒，骗骗自己gap去找工体验下就业环境同时探索下研究生和未来的专业方向，就申请了英美学校的defer(真·备胎计划)，运气好都批准了。英国这边占位费一直挺高，一下子10%学费，等于要是最后不去那，真的是拿家里的钱开玩笑——就为了这段第一句那个所谓的理由。
+
+
+
+但回过头来，我发现gap最忌讳的就是没有做好提前的计划和找工准备，比如要复习那些面试要考的题，要去哪里工作，什么途径投递，target公司有哪些，如果心仪的选不上planB公司又有哪些...对于我这种半吊子空有GPA的渣，这些甚至应该在回国之前就开始进行——然而我去年6-8月其实并没有准备好，心思依然很散，直到9、10月才开始。然后乍一看，大厂招聘要求挺高，就算是实习面试一般也是3轮或以上，以我这种没有深度实战经历说不出所以然的半吊子，当面完网易一个低端岗位(依然有算法题)失败后就不再考虑了。幸运的是，复习过程中一些基本的东西+专门看对应公司的面经，能达到苏州和上海的一些小厂要求，加上自己比较能BB，聊天挺愉快。最后去了上海做一些小后端的活儿，度过了19年最后2个多月，也是迷幻20年平静的前夕。
+
+
+
+接着，1月疫情开始蔓延，但当时处于封锁消息的17天，武汉外的人并不知情。算是幸运，当时稀里糊涂抱着下半年换个工作方向的OS，辞了职，在1月初就回了老家休息，还送别了美国春季入学的朋友(至少避开了国内疫情)。然后疫情期间，在家嘛就自然而然咸鱼化，这种状态的我是无心也找不到新工作的(唉)...在此期间，3、4月看到海外的疫情开始蔓延，5、6月美国疫情和种族斗争的失控和7月中美关系恶化，此时不禁又感叹幸运：当时交了巨额占位费，现在是要发挥作用了。而一年前这个时候，还和同学们憧憬着相约在美国，去那学CS和工作当高薪不加班群体，而不是回国大概率当工作节奏快强度大的上班族社畜，现在是不得不食言了😷。
+
+
+
+当然，20fall入学的留学生这半年都是网课了，因为国外还是有二次复发的风险。但总的来看，去年今日的gap决定+申请defer是让我避开了今年春季疫情的峰期，同时defer一手英国还让我不用今年再申请就有书读——但也意味着，我错过了和熟悉的同学一起读书的机会，而是要去陌生的环境面对陌生的人，而在英国开设PSW留学签证的情况下，是该计划留下试水海外职场还是抓紧宝贵的应届生身份直接回国。
+
+
+
+即我这浑浑噩噩的过去365天，比起世界上很多人现在看来其实算有各种幸运了，个体在大局势和大灾难面前过于渺小；而在这世界迷幻的1年，感激活着，平安喜乐。虽然不是宗教信仰者，但我相信感应和巧合，何况过去发生了种种幸运的巧合让我手上还留有读研的权利，可能在上帝的剧本里我就该老实去英国完成学业。希望未来的日子，世界会好转，而我还没有荒废到不可恢复。
