update backup branch

--- a/source/_posts/7月小记.md
+++ b/source/_posts/7月小记.md
@@ -1,7 +1,8 @@
 ---
-title: 7、8月小记
+title: 2020小记
 date: 2020-07-01 23:47:28
 tags: [feeling&mind, 积累]
+
 ---
 
 
@@ -61,3 +62,14 @@ tags: [feeling&mind, 积累]
 
 
 即我这浑浑噩噩的过去365天，比起世界上很多人现在看来其实算有各种幸运了，个体在大局势和大灾难面前过于渺小；而在这世界迷幻的1年，感激活着，平安喜乐。虽然不是宗教信仰者，但我相信感应和巧合，何况过去发生了种种幸运的巧合让我手上还留有读研的权利，可能在上帝的剧本里我就该老实去英国完成学业。希望未来的日子，世界会好转，而我还没有荒废到不可恢复。
+
+
+
+### 12.18 结束Term1
+
+Based London, UK. 在这最糟糕的2020年收官的下半年，匆匆忙忙混了几个月的巨额网课。总体来说，的确效果是不如线下的，当然自己以前线下上课基本出勤的好习惯也是伴随着wfh的政策，逐渐好几分浑浑噩噩= =（逃 
+
+关于上课体验，老师态度真的可以很清楚的看出来。UCL至少我选的这几门课的老师, 当然也是因为网课直播，有一些口碑比较好的老师，稍微也会遇到网课的进度问题，QA缓解会穿插在live中，但到点该停止讲解录屏 则必须停止。
+
+另一方面，虽然学长学姐已经给打过了"预防针"，告知部分讲师以前，在线下授课是一个什么状况，但某些lecturer线上授课的效果比描述的还差(这还属于在UCL名声不错的ml系列...)，我是觉得如果一个讲师连他直播或者录屏，学生那边的观看率(或者出勤率)一半都不能保证，或说上课没有办法讲清楚掉大部分知识点 导致学生课后还得回看好多遍甚至查阅大量课外资料，那真正该质疑的，小部分责任是学生水平low了(比如我...)，更多原因或许是讲师那边是不是得做出调整：或是 课程难度设置和学生的接受能力不匹配，或是 表达能力差，或者根本的教学内容准备的态度问题。以前上学时总说，如果课上能解决 就不要拖到课后，这是出席课堂or观看录屏的最大意义；即使现在还推荐了further reading, 但如果主要的**正确学好的姿势**，是得学生自己去看课本查资料，而不是通过follow老师的授课，那这门课的为什么要设置讲师(总不会仅仅为了让个懂行的 来设计适合做考试的内容吧)，主辅不分呢？这个标准，虽然不是所有level的课程都应该符合的，但大部分非advanced应该遵循吧...
+
